k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-demo-app
  labels:
    app.kubernetes.io/name: springboot-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: springboot-demo-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: springboot-demo-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000

      containers:
        - name: app
          image: springboot-demo-app:local
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
