k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-demo-app
spec:
  ingressClassName: nginx
  rules:
    - host: springboot-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-demo-app
                port:
                  number: 8080
